updated Random Forest

--- a/chp40_Random_Forest.ipynb
+++ b/chp40_Random_Forest.ipynb
@@ -1428,16 +1428,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "id": "04e41f2d-f638-47b6-b6e5-ea777800a6cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
     "import joblib\n",
     "joblib.dump(pipeline,'telecom_pipeline.pkl')\n",
     "\n",
     "loaded=joblib.load('telecom_pipeline.pkl')\n",
-    "redictions=loaded.predict(new_customer)"
+    "predictions=loaded.predict(new_customer)\n",
+    "print(predictions)"
    ]
   },
   {
